# RecipeManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  Food.cpp  Food.h  Ingredient.h  Meal.h  MealPlan.h  Recipe-Manager-Diagrams.drawio  Recipe.cpp  Recipe.h  main.cpp  test.cpp
include/: Food.h  Ingredient.h  Meal.h  MealPlan.h  Recipe.h
src/: Food.cpp  Recipe.cpp
